# FixedMazeAnalyses

./: .gitignore  LICENSE  README.md  check_hyperparameter.py  pyproject.toml
analysis_scripts/: generate_all_habits.py  get_optimal_policy.py  move_data_to_mongodb.py  starting_script.py  statistics_on_time_on_node_trial_length.py  vector_optimal_straight_proportions.py  visualize_inferred_routes.py
analysis_scripts/efficacy_of_route_generation_scripts/: route_similarities_analysis.py  run_route_similarity_analysis_for_all.py
analysis_scripts/is_it_markovian_scripts/: regression_script.py  run_analysis.py
analysis_scripts/is_it_using_routes_scripts/: generate_plots.py  regression_script.py  regression_script_nmf_version.py  regression_script_pca_version.py  run_analysis_nmf_version.py  run_analysis_pca_version.py
analysis_scripts/route_inference_scripts/: generate_all_lmdp_hpo.py  generate_all_lmdp_models.py  generate_all_nmfs.py  generate_all_pcs.py  generate_csv_to_run_hpo_and_models.py  generate_hmm_routes_single_subject_maze.py  generate_hmm_routes_single_subject_maze_with_optimal_configs.py  generate_pcs_for_agent_type.py  hyperparameter_search.py  model_evaluation.py
analysis_scripts/synthetic_agents_generating_scripts/: generate_all_agents.py  generate_single_agent_type_move_to_mongodb.py  move_data_to_mongodb.py
bash_scripts/: hyperparameter_search.sh  run_lmdp_model.sh  run_script.sh
config/: hyperparam_config.json
src/datahelper/: fields.py  load_data.py  reset_data.py  upload_data.py
src/lmdphelper/: callback.py  hp_objective.py  train_entry.py
(+18 files in other folders)
